--- a/index.html
+++ b/index.html
@@ -3,21 +3,93 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <img class ="logo logo_place_header" src="images/logo_place_header.svg" alt="logo">
+      <h1 class = "header__title">Научиться учиться</h1>
+      <div class = "header__subtitle">Какие современные и эффективные подходы к обучению вы
+        можете использовать в своей жизни?
+        <a class = "header__link" href="#" >Узнать&#8594;</a>
+      </div>
+      <div class = "header__square-pic"></div>
+      <img class ="header__main-illustration" src="images/header-image.png" alt="main-illustration">
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief">Главные проблемы в обучении</div>
+          <div class="two-columns__main-text">
+            <div class="two-column__paragraph_normal">Ни в школе, ни в институте нас не учае тому,
+              как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+              тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто
+              в итоге это не дает нам реального знания. Зубрежка быстро выветривается
+              и не приносит пользы.
+            </div>
+            <div class="two-column__paragraph_normal two-column__paragraph_margin">
+              <span class=two-column__main-text_paragraph_bold>Вывод:</span>
+              Учиться тоже надо уметь, но почему то этому мало где учат. Что с этим делать?
+            </div>
+            <div class="two-column__paragraph_normal">Конкретные техники и упражнения помогают
+              изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники
+              применяются на примере обучения в Практикуме.
+            </div>
+          </div>
+        </div>
       </section>
-
       <section class="digits">
+        <div class="section-title">Цифры и факты</div>
+        <div class="section-subtitle">Про учебу и мозг</div>
+        <div class="table">
+          <div class="table__row">
+            <div class="table__cell">
+            <div class="table__heading">86 миллиардов</div>
+            <div class="table__text">Число нейронов в мозге человека</div>
+            </div>
+            <div class="table__cell">
+            <div class="table__heading">2,1 миллиарда</div>
+            <div class="table__text">Число нейронов в мозге человека</div>
+            </div>
+            <div class="table__cell">
+            <div class="table__heading">1000 терабайт</div>
+            <div class="table__text">Объем памяти человека</div>
+            </div>
+            <div class="table__cell">
+            <div class="table__heading">500 триллионов</div>
+            <div class="table__text">Число ответственных за обучение нервных синапсов
+              у взрослого человека</div>
+            </div>
+          </div>
+          <div class="table__row">
+          <div class="table__cell">
+            <div class="table__heading">86 миллиардов</div>
+            <div class="table__text">Число нейронов в мозге человека</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">2,1 миллиарда</div>
+            <div class="table__text">Число нейронов в мозге человека</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">1000 терабайт</div>
+            <div class="table__text">Объем памяти человека</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">500 триллионов</div>
+            <div class="table__text">Число ответственных за обучение нервных синапсов
+              у взрослого человека</div>
+          </div>
+        </div>
+        </div>
       </section>
-
       <section class="feynman">
+        <div class="feynman__title">Метод Фейнмана</div>
+        <div class="feynman__subtitle">Выучить и не забыть</div>
+        <a class = "feynman__link" href="#" >Подробнее&#8594;</a>
+        <img class ="feynman__img" src="images/feynman.png" alt="feynman">
       </section>
 
       <section class="kaufman">
