--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class ="logo logo_place_header" src="images/logo_place_header.svg" alt="logo">
+      <img class ="logo_place_header" src="images/logo_place_header.svg" alt="logo">
       <h1 class = "header__title">Научиться учиться</h1>
       <div class = "header__subtitle">Какие современные и эффективные подходы к обучению вы
         можете использовать в своей жизни?
@@ -93,10 +93,84 @@
       </section>
 
       <section class="kaufman">
+        <div class="kaufman__title">Принципы обучения</div>
+        <div class="kaufman__subtitle">от Джоша Кауфмана</div>
+        <div class="kaufman__table">
+          <div class="kaufman__table__row">
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__heading">1</div>
+              <div class="kaufman__table__text">Выберите привлекательный проект</div>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__heading">2</div>
+              <div class="kaufman__table__text">Сосредоточьтесь на каком то одном навыке</div>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__heading">3</div>
+              <div class="kaufman__table__text">Определите целевой уровени настерства</div>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__heading">4</div>
+              <div class="kaufman__table__text">Разбейте навык на элементы</div>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__heading">5</div>
+              <div class="kaufman__table__text">Приготовьте все необходимое для занятий</div>
+            </div>
+          </div>
+          <div class="kaufman__table__row">
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__heading">6</div>
+              <div class="kaufman__table__text">Устраните препятствия для занятий</div>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__heading">7</div>
+              <div class="kaufman__table__text">Выберите специяальное время для занятий</div>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__heading">8</div>
+              <div class="kaufman__table__text">Создайте быстрые петли обратной связи</div>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__heading">9</div>
+              <div class="kaufman__table__text">Занимайтесь по рассписанию короткими
+                интенсивными интервалами</div>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__heading">10</div>
+              <div class="kaufman__table__text">Уделяйте внимание количеству и скорости</div>
+            </div>
+          </div>
+        </div>
+        <img class ="triangle" src="images/kaufman-triangle.svg" alt="triangle">
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__content_copyright">
+          <img class ="logo_place_footer" src="images/logo_place_footer.svg" alt="logo">
+          <div class="footer__author">&copy;2019. Виктор Абанькин</div>
+        </div>
+        <div class="footer__content_info">
+          <div class="footer__column-heading">О практикуме</div>
+          <div class = "footer__column-links">
+            <a class = "footer__column-link" href="#">Главная</a>
+            <a class = "footer__column-link" href="#">Концепция</a>
+            <a class = "footer__column-link" href="#">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__content_social">
+          <div class="footer__column-heading">Соцсети</div>
+          <div class="footer__column-links">
+            <p class="indent_no"><a class="footer__column-link icon-size" href="#"><img src="images/facebook_color_white.svg"
+              alt=facebook"> Facebook</a></p>
+            <p class="indent_no"><a class="footer__column-link icon-size" href="#"><img src="images/vk_color_white.svg"
+              alt=vk"> ВКонтакте</a></p>
+            <p class="indent_no"><a class="footer__column-link icon-size" href="#"><img src="images/instagram_color_white.svg"
+              alt=vk"> Instagram</a></p>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
