--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class ="logo_place_header" src="images/logo_place_header.svg" alt="logo">
+      <img class ="logo logo_place_header" src="images/logo_place_header.svg" alt="logo">
       <h1 class = "header__title">Научиться учиться</h1>
-      <div class = "header__subtitle">Какие современные и эффективные подходы к обучению вы
+      <h2 class = "header__subtitle">Какие современные и эффективные подходы к обучению вы
         можете использовать в своей жизни?
         <a class = "header__link" href="#" >Узнать&#8594;</a>
-      </div>
+      </h2>
       <div class = "header__square-pic"></div>
       <img class ="header__main-illustration" src="images/header-image.png" alt="main-illustration">
     </header>
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <div class="two-columns__brief">Главные проблемы в обучении</div>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <div class="two-column__paragraph_normal">Ни в школе, ни в институте нас не учае тому,
+            <div class="two-column__paragraph">Ни в школе, ни в институте нас не учае тому,
               как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
               тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто
               в итоге это не дает нам реального знания. Зубрежка быстро выветривается
               и не приносит пользы.
             </div>
-            <div class="two-column__paragraph_normal two-column__paragraph_margin">
+            <div class="two-column__paragraph two-column__paragraph_margin">
               <span class=two-column__main-text_paragraph_bold>Вывод:</span>
               Учиться тоже надо уметь, но почему то этому мало где учат. Что с этим делать?
             </div>
-            <div class="two-column__paragraph_normal">Конкретные техники и упражнения помогают
+            <div class="two-column__paragraph">Конкретные техники и упражнения помогают
               изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники
               применяются на примере обучения в Практикуме.
             </div>
@@ -88,7 +88,7 @@
       <section class="feynman">
         <div class="feynman__title">Метод Фейнмана</div>
         <div class="feynman__subtitle">Выучить и не забыть</div>
-        <a class = "feynman__link" href="#" >Подробнее&#8594;</a>
+        <a class = "feynman__link link_blue" href="#" >Подробнее&#8594;</a>
         <img class ="feynman__img" src="images/feynman.png" alt="feynman">
       </section>
 
@@ -148,25 +148,28 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__content_copyright">
-          <img class ="logo_place_footer" src="images/logo_place_footer.svg" alt="logo">
+          <img class ="logo logo_place_footer" src="images/logo_place_footer.svg" alt="logo">
           <div class="footer__author">&copy;2019. Виктор Абанькин</div>
         </div>
         <div class="footer__content_info">
-          <div class="footer__column-heading">О практикуме</div>
+          <div class="footer__column-heading">О Практикуме</div>
           <div class = "footer__column-links">
-            <a class = "footer__column-link" href="#">Главная</a>
-            <a class = "footer__column-link" href="#">Концепция</a>
-            <a class = "footer__column-link" href="#">Наставники</a>
+            <a class = "footer__column-link link_white" href="#">Главная</a>
+            <a class = "footer__column-link link_white" href="#">Концепция</a>
+            <a class = "footer__column-link link_white" href="#">Наставники</a>
           </div>
         </div>
         <div class="footer__content_social">
           <div class="footer__column-heading">Соцсети</div>
           <div class="footer__column-links">
-            <p class="indent_no"><a class="footer__column-link icon-size" href="#"><img src="images/facebook_color_white.svg"
+            <p class="indent_no"><a class="footer__column-link link_white icon-size"
+              href="#"><img src="images/facebook_color_white.svg"
               alt=facebook"> Facebook</a></p>
-            <p class="indent_no"><a class="footer__column-link icon-size" href="#"><img src="images/vk_color_white.svg"
+            <p class="indent_no"><a class="footer__column-link link_white icon-size"
+              href="#"><img src="images/vk_color_white.svg"
               alt=vk"> ВКонтакте</a></p>
-            <p class="indent_no"><a class="footer__column-link icon-size" href="#"><img src="images/instagram_color_white.svg"
+            <p class="indent_no"><a class="footer__column-link link_white icon-size"
+              href="#"><img src="images/instagram_color_white.svg"
               alt=vk"> Instagram</a></p>
           </div>
         </div>
