--- a/index.html
+++ b/index.html
@@ -24,152 +24,161 @@
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <div class="two-column__paragraph">Ни в школе, ни в институте нас не учае тому,
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учае тому,
               как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
               тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто
               в итоге это не дает нам реального знания. Зубрежка быстро выветривается
               и не приносит пользы.
-            </div>
-            <div class="two-column__paragraph two-column__paragraph_margin">
-              <span class=two-column__main-text_paragraph_bold>Вывод:</span>
+            </p>
+            <p class="two-columns__paragraph two-columns__paragraph_margin">
+              <span  class=two-columns__span-accent>Вывод:</span>
               Учиться тоже надо уметь, но почему то этому мало где учат. Что с этим делать?
-            </div>
-            <div class="two-column__paragraph">Конкретные техники и упражнения помогают
+            </p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают
               изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники
               применяются на примере обучения в Практикуме.
-            </div>
+            </p>
           </div>
         </div>
       </section>
+
       <section class="digits">
-        <div class="section-title">Цифры и факты</div>
-        <div class="section-subtitle">Про учебу и мозг</div>
-        <div class="table">
+        <h2 class="section-title section-title_theme_lignt">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle_theme_light">Про учебу и мозг</h3>
+        <div class="table table_theme_light">
           <div class="table__row">
-            <div class="table__cell">
-            <div class="table__heading">86 миллиардов</div>
-            <div class="table__text">Число нейронов в мозге человека</div>
+            <div class="table__cell_theme_light">
+              <p class="table__heading table__heading_theme_light">86 миллиардов</p>
+              <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
             </div>
-            <div class="table__cell">
-            <div class="table__heading">2,1 миллиарда</div>
-            <div class="table__text">Число нейронов в мозге человека</div>
+            <div class="table__cell_theme_light">
+              <p class="table__heading table__heading_theme_light">2,1 миллиарда</p>
+              <p class="table__text table__text_theme_light">Число нуждающихся в повышении
+                квалификации</p>
+              <p class="table__text table__text_theme_light">Всемирный банк, 2017</p>
             </div>
-            <div class="table__cell">
-            <div class="table__heading">1000 терабайт</div>
-            <div class="table__text">Объем памяти человека</div>
+            <div class="table__cell_theme_light">
+              <p class="table__heading table__heading_theme_light">1000 терабайт</p>
+              <p class="table__text table__text_theme_light">Объем памяти человека</p>
             </div>
-            <div class="table__cell">
-            <div class="table__heading">500 триллионов</div>
-            <div class="table__text">Число ответственных за обучение нервных синапсов
-              у взрослого человека</div>
+            <div class="table__cell_theme_light">
+              <p class="table__heading table__heading_theme_light">500 триллионов</p>
+              <p class="table__text table__text_theme_light">Число ответственных за обучение
+                нервных синапсов у взрослого человека</p>
             </div>
           </div>
           <div class="table__row">
-          <div class="table__cell">
-            <div class="table__heading">86 миллиардов</div>
-            <div class="table__text">Число нейронов в мозге человека</div>
+            <div class="table__cell_theme_light">
+              <p class="table__heading table__heading_theme_light">420 миллионов</p>
+              <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не
+                имеющих образования для трудоустройства</p>
+              <p class="table__text table__text_theme_light">Всемирный банк, 2017</p>
+            </div>
+            <div class="table__cell_theme_light">
+              <p class="table__heading table__heading_theme_light">17-20 лет</p>
+              <p class="table__text table__text_theme_light">Пик обучаемости</p>
+            </div>
+            <div class="table__cell_theme_light">
+              <p class="table__heading table__heading_theme_light">1885 год</p>
+              <p class="table__text table__text_theme_light">Открытие кривой забывания</p>
+            </div>
+            <div class="table__cell_theme_light">
+              <p class="table__heading table__heading_theme_light">1889 год</p>
+              <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
+              </div>
+            </div>
           </div>
-          <div class="table__cell">
-            <div class="table__heading">2,1 миллиарда</div>
-            <div class="table__text">Число нейронов в мозге человека</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">1000 терабайт</div>
-            <div class="table__text">Объем памяти человека</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">500 триллионов</div>
-            <div class="table__text">Число ответственных за обучение нервных синапсов
-              у взрослого человека</div>
-          </div>
-        </div>
         </div>
       </section>
+
       <section class="feynman">
-        <div class="feynman__title">Метод Фейнмана</div>
-        <div class="feynman__subtitle">Выучить и не забыть</div>
-        <a class = "feynman__link link_blue" href="#" >Подробнее&#8594;</a>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a class = "feynman__link" href="#" >Подробнее&#8594;</a>
         <img class ="feynman__img" src="images/feynman.png" alt="feynman">
       </section>
 
       <section class="kaufman">
-        <div class="kaufman__title">Принципы обучения</div>
-        <div class="kaufman__subtitle">от Джоша Кауфмана</div>
-        <div class="kaufman__table">
-          <div class="kaufman__table__row">
-            <div class="kaufman__table__cell">
-              <div class="kaufman__table__heading">1</div>
-              <div class="kaufman__table__text">Выберите привлекательный проект</div>
+        <p class="section-title section-title_theme_dark">Принципы обучения</p>
+        <div class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</div>
+        <div class="table table_theme_dark">
+          <div class="table__row">
+            <div class="table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">1</p>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект</p>
             </div>
-            <div class="kaufman__table__cell">
-              <div class="kaufman__table__heading">2</div>
-              <div class="kaufman__table__text">Сосредоточьтесь на каком то одном навыке</div>
+            <div class="table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">2</p>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком то одном
+                навыке</p>
             </div>
-            <div class="kaufman__table__cell">
-              <div class="kaufman__table__heading">3</div>
-              <div class="kaufman__table__text">Определите целевой уровени настерства</div>
+            <div class="table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">3</p>
+              <p class="table__text table__text_theme_dark">Определите целевой уровени настерства</p>
             </div>
-            <div class="kaufman__table__cell">
-              <div class="kaufman__table__heading">4</div>
-              <div class="kaufman__table__text">Разбейте навык на элементы</div>
+            <div class="table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">4</p>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы</p>
             </div>
-            <div class="kaufman__table__cell">
-              <div class="kaufman__table__heading">5</div>
-              <div class="kaufman__table__text">Приготовьте все необходимое для занятий</div>
+            <div class="table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">5</p>
+              <p class="table__text table__text_theme_dark">Приготовьте все необходимое
+                для занятий</p>
             </div>
           </div>
-          <div class="kaufman__table__row">
-            <div class="kaufman__table__cell">
-              <div class="kaufman__table__heading">6</div>
-              <div class="kaufman__table__text">Устраните препятствия для занятий</div>
+          <div class="table__row">
+            <div class="table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">6</p>
+              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий</p>
             </div>
-            <div class="kaufman__table__cell">
-              <div class="kaufman__table__heading">7</div>
-              <div class="kaufman__table__text">Выберите специяальное время для занятий</div>
+            <div class="table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">7</p>
+              <p class="table__text table__text_theme_dark">Выберите специяальное время для занятий</p>
             </div>
-            <div class="kaufman__table__cell">
-              <div class="kaufman__table__heading">8</div>
-              <div class="kaufman__table__text">Создайте быстрые петли обратной связи</div>
+            <div class="table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">8</p>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи</p>
             </div>
-            <div class="kaufman__table__cell">
-              <div class="kaufman__table__heading">9</div>
-              <div class="kaufman__table__text">Занимайтесь по рассписанию короткими
-                интенсивными интервалами</div>
+            <div class="table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">9</p>
+              <p class="table__text table__text_theme_dark">Занимайтесь по рассписанию короткими
+                интенсивными интервалами</p>
             </div>
-            <div class="kaufman__table__cell">
-              <div class="kaufman__table__heading">10</div>
-              <div class="kaufman__table__text">Уделяйте внимание количеству и скорости</div>
+            <div class="table__cell_theme_dark">
+              <p class="table__heading table__heading_theme_dark">10</p>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости</p>
             </div>
           </div>
         </div>
-        <img class ="triangle" src="images/kaufman-triangle.svg" alt="triangle">
+        <img class ="kaufman__triangle" src="images/kaufman-triangle.svg" alt="triangle">
       </section>
     </main>
+
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__content_copyright">
+        <div class="footer__column_content_copyright">
           <img class ="logo logo_place_footer" src="images/logo_place_footer.svg" alt="logo">
-          <div class="footer__author">&copy;2019. Виктор Абанькин</div>
+          <p class="footer__author">&copy;2019. Виктор Абанькин</p>
         </div>
-        <div class="footer__content_info">
-          <div class="footer__column-heading">О Практикуме</div>
+        <div class="footer__column_content_info">
+          <p class="footer__column-heading">О Практикуме</p>
           <div class = "footer__column-links">
-            <a class = "footer__column-link link_white" href="#">Главная</a>
-            <a class = "footer__column-link link_white" href="#">Концепция</a>
-            <a class = "footer__column-link link_white" href="#">Наставники</a>
+            <a class = "footer__column-link" href="#">Главная</a>
+            <a class = "footer__column-link" href="#">Концепция</a>
+            <a class = "footer__column-link" href="#">Наставники</a>
           </div>
         </div>
-        <div class="footer__content_social">
-          <div class="footer__column-heading">Соцсети</div>
+        <div class="footer__column_content_social">
+          <p class="footer__column-heading">Соцсети</p>
           <div class="footer__column-links">
-            <p class="indent_no"><a class="footer__column-link link_white icon-size"
-              href="#"><img src="images/facebook_color_white.svg"
-              alt=facebook"> Facebook</a></p>
-            <p class="indent_no"><a class="footer__column-link link_white icon-size"
-              href="#"><img src="images/vk_color_white.svg"
+            <p class="indent_no"><a class="footer__column-link"
+              href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg"
+              alt=facebook">Facebook</a></p>
+            <p class="indent_no"><a class="footer__column-link"
+              href="#"><img class="footer__social-icon" src="images/vk_color_white.svg"
               alt=vk"> ВКонтакте</a></p>
-            <p class="indent_no"><a class="footer__column-link link_white icon-size"
-              href="#"><img src="images/instagram_color_white.svg"
+            <p class="indent_no"><a class="footer__column-link"
+              href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg"
               alt=vk"> Instagram</a></p>
           </div>
         </div>
