--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
             <div class="table__cell_theme_light">
               <p class="table__heading table__heading_theme_light">1889 год</p>
               <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
-              </div>
             </div>
           </div>
         </div>
@@ -99,8 +98,8 @@
       </section>
 
       <section class="kaufman">
-        <p class="section-title section-title_theme_dark">Принципы обучения</p>
-        <div class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</div>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
         <div class="table table_theme_dark">
           <div class="table__row">
             <div class="table__cell_theme_dark">
@@ -173,13 +172,13 @@
           <div class="footer__column-links">
             <p class="indent_no"><a class="footer__column-link"
               href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg"
-              alt=facebook">Facebook</a></p>
+              alt="facebook"> Facebook</a></p>
             <p class="indent_no"><a class="footer__column-link"
               href="#"><img class="footer__social-icon" src="images/vk_color_white.svg"
-              alt=vk"> ВКонтакте</a></p>
+              alt="vk"> ВКонтакте</a></p>
             <p class="indent_no"><a class="footer__column-link"
               href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg"
-              alt=vk"> Instagram</a></p>
+              alt="vk"> Instagram</a></p>
           </div>
         </div>
       </div>
