исправлены теги alt

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class ="logo logo_place_header" src="images/logo_place_header.svg" alt="logo">
+      <img class ="logo logo_place_header" src="images/logo_place_header.svg" alt="логотип Яндекс Практикум">
       <h1 class = "header__title">Научиться учиться</h1>
-      <h2 class = "header__subtitle">Какие современные и эффективные подходы к обучению вы
-        можете использовать в своей жизни?
+      <h2 class = "header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class = "header__link" href="#" >Узнать&#8594;</a>
       </h2>
       <div class = "header__square-pic"></div>
-      <img class ="header__main-illustration" src="images/header-image.png" alt="main-illustration">
+      <img class ="header__main-illustration" src="images/header-image.png" alt="заглавная картинка">
     </header>
     <main class="content">
       <section class="description">
@@ -31,8 +30,7 @@
               и не приносит пользы.
             </p>
             <p class="two-columns__paragraph two-columns__paragraph_margin">
-              <span  class=two-columns__span-accent>Вывод:</span>
-              Учиться тоже надо уметь, но почему то этому мало где учат. Что с этим делать?
+              <span  class=two-columns__span-accent>Вывод:</span>Учиться тоже надо уметь, но почему то этому мало где учат. Что с этим делать?
             </p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают
               изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники
@@ -149,14 +147,15 @@
             </div>
           </div>
         </div>
-        <img class ="kaufman__triangle" src="images/kaufman-triangle.svg" alt="triangle">
+        <img class ="kaufman__triangle" src="images/kaufman-triangle.svg" alt="треугольник">
       </section>
     </main>
 
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
-          <img class ="logo logo_place_footer" src="images/logo_place_footer.svg" alt="logo">
+          <img class ="logo logo_place_footer" src="images/logo_place_footer.svg"
+          alt="логотип Яндекс Практикум">
           <p class="footer__author">&copy;2019. Виктор Абанькин</p>
         </div>
         <div class="footer__column_content_info">
@@ -172,13 +171,13 @@
           <div class="footer__column-links">
             <p class="indent_no"><a class="footer__column-link"
               href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg"
-              alt="facebook"> Facebook</a></p>
+              alt="фейсбук"> Facebook</a></p>
             <p class="indent_no"><a class="footer__column-link"
               href="#"><img class="footer__social-icon" src="images/vk_color_white.svg"
-              alt="vk"> ВКонтакте</a></p>
+              alt="вконтакте"> ВКонтакте</a></p>
             <p class="indent_no"><a class="footer__column-link"
               href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg"
-              alt="vk"> Instagram</a></p>
+              alt="инстаграм"> Instagram</a></p>
           </div>
         </div>
       </div>
