--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть</h3>
         <a class = "feynman__link" href="#" >Подробнее&#8594;</a>
-        <img class ="feynman__img" src="images/feynman.png" alt="feynman">
+        <img class ="feynman__img" src="images/feynman.png" alt="фейман">
       </section>
 
       <section class="kaufman">
