--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
           <nav class="footer__column-links">
             <ul class="footer__column-links">
               <li><a class="footer__column-link" href="#">
-                <img class="footer__social-icon" src="images/facebook_color_white.svg">Facebook</a></li>
+                <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="">Facebook</a></li>
               <li><a class="footer__column-link" href="#">
-                <img class="footer__social-icon" src="images/vk_color_white.svg">ВКонтакте</a></li>
+                <img class="footer__social-icon" src="images/vk_color_white.svg" alt="">ВКонтакте</a></li>
               <li><a class="footer__column-link" href="#">
-                <img class="footer__social-icon" src="images/instagram_color_white.svg">Instagram</a></li>
+                <img class="footer__social-icon" src="images/instagram_color_white.svg" alt="">Instagram</a></li>
             </ul>
           </nav>
         </div>
