--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="pages/index.css">
+  <link rel="stylesheet" href="blocks/header.css">
+  <link rel="stylesheet" href="blocks/footer.css">
   <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
-  <div class="page">
+  <div class="root">
     <header class="header">
       <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
@@ -18,6 +20,7 @@
       <div class="header__square-pic"></div>
       <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка. Автор Федор Решетников. Иллюстрация.">
     </header>
+
     <main class="content">
       <section class="description">
         <div class="two-columns">
@@ -35,6 +38,68 @@
               применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-attention.png" alt="">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-recall.png" alt="">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-interliving.png" alt="">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-question.png" alt="">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-competence.png" alt="">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__frames">
+         <iframe class="video_iframe" width="1180" height="664" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe class="video_iframe" width="1180" height="664" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+              гуманитарием, причем далеко не самым умным. В армии она изучала русский язык,
+              чтобы получить надбавку, да так успешно, что ее выдвинули в командиры. но для
+              продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой
+              подход к точным наукам. Оказалось, если вам что-то "плохо дается", ваши добытые
+              трудом знания гораздо глубже, чем у тех, кому все ясно с первого взгляда. </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
+        <a class="feynman__link" href="#" >Подробнее&#8594;</a>
+        <img class="feynman__img" src="images/feynman.png" alt="Ричард Фейман, американский ученый. Основные достижения в области теоретической физики.">
       </section>
 
       <section class="digits">
@@ -78,11 +143,21 @@
         </div>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a class="feynman__link" href="#" >Подробнее&#8594;</a>
-        <img class="feynman__img" src="images/feynman.png" alt="Ричард Фейман, американский ученый. Основные достижения в области теоретической физики.">
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">Салман Хан</h3>
+          <h2 class="khan__title">Весь мир - школа</h2>
+          <p class="khan__quote"> Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
+            по всему миру. Книгу "Весь мир - школа" нужно прочитать всем, кто занимается
+            оюразованием - так учащиеся повсюду смогут получит навыки и знания, которые
+            приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="">
+            <a class="khan__buy-link" href="#" >Купить книгу&#8594;</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
@@ -135,6 +210,17 @@
         </div>
         <div class="kaufman__triangle"></div>
       </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <img class="resources__logo" src="images/resources-arzamas.svg" alt="">
+          <img class="resources__logo" src="images/resources-n1.svg" alt="">
+          <img class="resources__logo" src="images/resources-strelka.svg" alt="">
+          <img class="resources__logo" src="images/resources-polka.svg" alt="">
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -155,7 +241,7 @@
         </div>
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <nav class="footer__column-links">
+          <nav>
             <ul class="footer__column-links">
               <li><a class="footer__column-link" href="#">
                 <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="">Facebook</a></li>
