--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-attention.png" alt="">
+            <img class="cards__image" src="images/cards-attention.png" alt="Книга под названием 101 эссе, которые изменят ваше мышление.">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-recall.png" alt="">
+            <img class="cards__image" src="images/cards-recall.png" alt="Фигура статуи мыслителя с наклоненной головой и карандашом в руках.">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-interliving.png" alt="">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Люди в вестибюле помещения с высоким потолком и ребристыми стенами.">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-question.png" alt="">
+            <img class="cards__image" src="images/cards-question.png" alt="Человек внутри помещения, стены которого имеют ячейки разного размера. ">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-competence.png" alt="">
+            <img class="cards__image" src="images/cards-competence.png" alt="Стопка книг на ладони.">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
@@ -75,9 +75,9 @@
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="video__frames">
-         <iframe class="video_iframe" width="1180" height="664" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         <iframe class="video_iframe" width="1180" height="664" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="video__iframes">
+         <iframe class="video__iframe" width="1180" height="664" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe class="video__iframe" width="1180" height="664" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -87,7 +87,7 @@
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
               гуманитарием, причем далеко не самым умным. В армии она изучала русский язык,
-              чтобы получить надбавку, да так успешно, что ее выдвинули в командиры. но для
+              чтобы получить надбавку, да так успешно, что ее выдвинули в командиры. Но для
               продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой
               подход к точным наукам. Оказалось, если вам что-то "плохо дается", ваши добытые
               трудом знания гораздо глубже, чем у тех, кому все ясно с первого взгляда. </p>
@@ -149,12 +149,12 @@
           <h2 class="khan__title">Весь мир - школа</h2>
           <p class="khan__quote"> Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
             по всему миру. Книгу "Весь мир - школа" нужно прочитать всем, кто занимается
-            оюразованием - так учащиеся повсюду смогут получит навыки и знания, которые
+            образованием - так учащиеся повсюду смогут получит навыки и знания, которые
             приносят успех в школе, карьере и жизни.</p>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="images/khan-book.jpg" alt="">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги Салмана Хана под названием Весь мир - школа.">
             <a class="khan__buy-link" href="#" >Купить книгу&#8594;</a>
           </div>
         </div>
@@ -215,10 +215,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img class="resources__logo" src="images/resources-arzamas.svg" alt="">
-          <img class="resources__logo" src="images/resources-n1.svg" alt="">
-          <img class="resources__logo" src="images/resources-strelka.svg" alt="">
-          <img class="resources__logo" src="images/resources-polka.svg" alt="">
+          <img class="resources__logo" src="images/resources-arzamas.svg" alt="Логотип Арзамас">
+          <img class="resources__logo" src="images/resources-n1.svg" alt="Логотип N+1">
+          <img class="resources__logo" src="images/resources-strelka.svg" alt="Логотип Стрелка">
+          <img class="resources__logo" src="images/resources-polka.svg" alt="Логотип Полка">
         </div>
       </section>
     </main>
