логотипам в блоке resources добавлены ссылки

--- a/index.html
+++ b/index.html
@@ -211,14 +211,12 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <nav>
-          <ul class="resources__logo-zone">
-            <li><img class="resources__logo" src="images/resources-arzamas.svg" alt="Логотип Арзамас"></li>
-            <li><img class="resources__logo" src="images/resources-n1.svg" alt="Логотип N+1"></li>
-            <li><img class="resources__logo" src="images/resources-strelka.svg" alt="Логотип Стрелка"></li>
-            <li><img class="resources__logo" src="images/resources-polka.svg" alt="Логотип Полка"></li>
-          </ul>
-        </nav>
+        <ul class="resources__logo-zone">
+          <li><a href="#"><img class="resources__logo" src="images/resources-arzamas.svg" alt="Логотип Арзамас"></a></li>
+          <li><a href="#"><img class="resources__logo" src="images/resources-n1.svg" alt="Логотип N+1"></a></li>
+          <li><a href="#"><img class="resources__logo" src="images/resources-strelka.svg" alt="Логотип Стрелка"></a></li>
+          <li><a href="#"><img class="resources__logo" src="images/resources-polka.svg" alt="Логотип Полка"></a></li>
+        </ul>
       </section>
     </main>
 
